crates/lexeme/tests/ui/bad_variant_attr.stderr
error: expected string literal
 --> tests/ui/bad_variant_attr.rs:5:14
  |
5 |     #[lexeme(unknown)]
  |              ^^^^^^^
