crates/lexeme/tests/ui/bad_variant_attr.rs
use lexeme::Lexeme;

#[derive(Lexeme)]
pub enum Token {
    #[lexeme(unknown)]
    Ident,
}

fn main() {}
